--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 /* Common */
 :root {
   --header-bg: #10375c;
+  --height: 60px;
 }
 .container {
   width: 1170px;
@@ -21,10 +22,26 @@ body {
 a {
   text-decoration: none;
 }
+.btn {
+  display: inline-block;
+  padding: 0 20px;
+  height: var(--height);
+  min-width: 205px;
+  text-align: center;
+  line-height: var(--height);
+  color: #fff;
+  background: #2e80ce;
+}
 /* Header */
 header {
   min-height: 100vh;
   background: var(--header-bg);
+  padding-top: 30px;
+}
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .logo {
   font-size: 1rem;
@@ -66,4 +83,41 @@ header {
 .logo__brand:nth-child(2) {
   font-size: 1.2em;
   font-weight: 300;
+}
+/* Navbar */
+.navbar__list {
+  display: flex;
+}
+.navbar__link {
+  padding: 4px 21px;
+  font-family: "Sora", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 300;
+  color: #c9d2da;
+}
+.navbar__item--active {
+  font-weight: 400;
+  color: #fff;
+}
+.navbar__item--active::before {
+  position: relative;
+  display: inline-block;
+  content: "";
+  top: -2px;
+  left: -8px;
+  width: 6px;
+  height: 6px;
+  background: #fff;
+  border-radius: 50%;
+}
+.action__login {
+  color: #c9d2da;
+}
+.action__signup {
+  --height: 44px;
+  margin-left: 28px;
+  height: var(--height);
+  min-width: 104px;
+  border-radius: 22px;
+  line-height: var(--height);
 }
