--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,3 +121,68 @@ header {
   border-radius: 22px;
   line-height: var(--height);
 }
+/* Hero */
+.hero {
+  margin-top: 76px;
+  display: flex;
+  align-items: center;
+}
+.hero__content {
+  width: 44%;
+}
+.hero__heading {
+  font-family: "Sora", sans-serif;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 7rem;
+  line-height: 80px;
+  letter-spacing: -2%;
+  color: #fff;
+}
+.hero__desc {
+  margin-top: 22px;
+  font-family: "Sora", sans-serif;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 1.8rem;
+  line-height: 30px;
+  letter-spacing: 0%;
+  color: #c9d2da;
+}
+.hero__row {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+}
+.hero__row .btn-book {
+  border-radius: 30px;
+}
+.hero__row .hero__phone {
+  margin-left: 38px;
+  font-family: "Sora";
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.8rem;
+  text-align: center;
+  color: #fff;
+}
+.hero__images {
+  display: flex;
+  align-items: center;
+  margin-left: 133px;
+}
+.hero__images .hero__img {
+  width: 330px;
+  height: 540px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+.hero__img:nth-child(1){
+    position: relative;
+    margin-right: -6px;
+}
+.hero__img:nth-child(2) {
+  width: 210px;
+  height: 410px;
+  border-radius: 0px 6px 6px 0;
+}
