--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,3 +291,81 @@ header {
   letter-spacing: 0%;
   text-align: center;
 }
+/* Work */
+.work {
+  background: #f6fbff;
+  padding: 100px 0;
+}
+.work-heading {
+  font-family: "Sora", serif;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 5rem;
+  line-height: 60px;
+  letter-spacing: -2%;
+  color: #10375c;
+}
+.work-desc {
+  margin-top: 18px;
+  width: 468px;
+  font-family: "Sora", sans-serif;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 1.8rem;
+  line-height: 30px;
+  letter-spacing: 0%;
+  color: #575f66;
+}
+.work__list {
+  margin-top: 86px;
+  display: flex;
+  gap: 30px;
+}
+.work-item {
+  padding: 43px 42px;
+  border: 16px solid #eaf6ff;
+  border-radius: 4px;
+  background: #fff;
+}
+.work-item__icon {
+  width: 72px;
+  height: 72px;
+}
+.work-item__heading {
+  margin-top: 18px;
+  font-family: "Sora";
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 2.6rem;
+  line-height: 36px;
+  letter-spacing: 0%;
+  color: #10375c;
+}
+.work-item__desc {
+  margin-top: 28px;
+  font-family: "Sora";
+  font-weight: 300;
+  font-style: Light;
+  font-size: 1.6rem;
+  line-height: 28px;
+  letter-spacing: 0%;
+  color: #575f66;
+}
+.work-item .cta {
+  display: inline-block;
+  margin-top: 18px;
+  font-family: "Sora";
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.6rem;
+  line-height: 28px;
+  letter-spacing: 0%;
+  color: #2e80ce;
+}
+.work-item:hover{
+    position: relative;
+    border: 16px solid #2E80CE;
+    bottom: 16px;
+    transition: 2s;
+}
+/* About us */
