--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,10 +362,67 @@ header {
   letter-spacing: 0%;
   color: #2e80ce;
 }
-.work-item:hover{
-    position: relative;
-    border: 16px solid #2E80CE;
-    bottom: 16px;
-    transition: 2s;
+.work-item:hover {
+  position: relative;
+  border: 16px solid #2e80ce;
+  bottom: 16px;
+  transition: 2s;
 }
 /* About us */
+.about > .container {
+  padding: 170px 0;
+  display: flex;
+  align-items: center;
+}
+.about__images {
+  width: 48%;
+  position: relative;
+}
+.about__images img:nth-child(1) {
+  width: 512px;
+  height: 370px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+.about__images img:nth-child(2) {
+  position: absolute;
+  right: -58px;
+  top: 121px;
+  width: 332px;
+  height: 370px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+.about__content {
+  margin-left: 130px;
+}
+.about__content--heading {
+  font-family: "Sora";
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 5rem;
+  line-height: 60px;
+  letter-spacing: 0%;
+  color: #10375c;
+}
+.about__content--desc {
+  margin-top: 18px;
+  width: 468px;
+  font-family: "Sora";
+  font-weight: 300;
+  font-style: Light;
+  font-size: 1.8rem;
+  line-height: 30px;
+  letter-spacing: 0%;
+  color: #575f66;
+}
+.about__content .btn-more {
+  margin-top: 38px;
+  font-family: "Sora";
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.8rem;
+  text-align: center;
+  border-radius: 30px;
+}
+/* Member */
