--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,7 +489,7 @@ header {
   margin-left: auto;
   margin-right: auto;
 }
-.pagination-left {
+.pagination {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -497,10 +497,11 @@ header {
   height: 36px;
   border-radius: 50%;
   border: 1px solid #575f66;
+  color: #575f66;
   background: #fff;
   cursor: pointer;
 }
-.pagination-right {
+.pagination:hover {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -508,7 +509,60 @@ header {
   height: 36px;
   border-radius: 50%;
   border: 1px solid #2e80ce;
+  color: #fff;
   background: #2e80ce;
   cursor: pointer;
 }
 /* Install */
+.install {
+  margin-top: 265px;
+}
+.install > .container {
+  display: flex;
+  align-items: center;
+  background: #2e80ce;
+  border-radius: 4px;
+}
+.install-app {
+  margin-left: 70px;
+  margin-top: -95px;
+  width: 284px;
+  height: 522px;
+  object-fit: cover;
+}
+.install__content {
+  margin-left: 160px;
+}
+.install__content--heading {
+  width: 489px;
+  font-family: "Sora";
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 4.8rem;
+  line-height: 60px;
+  letter-spacing: -2%;
+  color: #fff;
+}
+.install__content--desc {
+  width: 586px;
+  margin-top: 18px;
+  font-family: "Sora";
+  font-weight: 300;
+  font-style: Light;
+  font-size: 1.8rem;
+  line-height: 30px;
+  letter-spacing: 0%;
+  color: #fff;
+  opacity: 0.7;
+}
+.install__row {
+  margin-top: 38px;
+  display: flex;
+  gap: 28px;
+}
+.install__btn {
+  background: #2e80ce;
+}
+.install__btn-img {
+  object-fit: cover;
+}
