--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,15 @@ a {
   color: #fff;
   background: #2e80ce;
 }
+h2 {
+  font-family: "Sora";
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 50px;
+  line-height: 60px;
+  letter-spacing: -2%;
+  color: #10375c;
+}
 /* Header */
 header {
   min-height: 100vh;
@@ -565,4 +574,82 @@ header {
 }
 .install__btn-img {
   object-fit: cover;
+}
+/* News */
+.news {
+  margin-top: 170px;
+}
+.news > .container {
+  display: flex;
+  align-items: center;
+}
+.news__content--heading {
+  width: 470px;
+}
+.news__content--cta {
+  display: inline-block;
+  margin-top: 28px;
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 28px;
+  letter-spacing: 0%;
+  color: #10375c;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+.news-pagination {
+  margin-top: 28px;
+  display: flex;
+  gap: 18px;
+}
+.news__lists {
+  display: flex;
+  margin-left: 130px;
+  gap: 30px;
+}
+.news__item--thumbnail {
+  width: 270px;
+  height: 172px;
+  object-fit: cover;
+  border-radius: 12px 12px 0 0;
+}
+.news__item--body {
+  padding: 18px 24px 21px 22px;
+}
+.news__item--title {
+  font-family: Sora;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 1.6rem;
+  line-height: 26px;
+  letter-spacing: 0%;
+  color: #10375c;
+}
+.news__item--desc {
+  margin-top: 10px;
+  font-family: Sora;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 1.4rem;
+  line-height: 24px;
+  letter-spacing: 0%;
+  color: #575f66;
+}
+.news__item--cta {
+  display: inline-block;
+  margin-top: 10px;
+  color: #10375c;
+}
+.news__item--cta:hover {
+  color: #2e80ce;
+}
+.news__item {
+  border: 1px solid #e8ebee;
+  border-radius: 12px 12px 0 0;
+}
+.news__item:hover {
+  border: 1px solid #fff;
+  box-shadow: 0px 14px 28px #0000000d;
+  transition: 0.25s;
+  transform: translateY(-10px);
 }
