--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -653,3 +653,166 @@ header {
   transition: 0.25s;
   transform: translateY(-10px);
 }
+/* Appointment */
+.appointment {
+  margin-top: 170px;
+  text-align: center;
+}
+.appointment > .container {
+  padding: 100px 0;
+  margin-left: auto;
+  margin-right: auto;
+  background: #f6fbff;
+}
+.appointment__heading {
+  position: relative;
+  text-align: center;
+}
+.appointment__heading::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-top: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  content: "";
+  width: 136px;
+  height: 2px;
+  background: #2e80ce;
+}
+.appointment__desc {
+  width: 617px;
+  margin: 36px auto 0 auto;
+  font-family: Sora;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 1.6rem;
+  line-height: 28px;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #575f66;
+}
+.btn-appointment {
+  margin-top: 38px;
+  border-radius: 30px;
+}
+/* Footer */
+footer {
+  margin-top: 170px;
+  padding-top: 100px;
+  background: #10375c;
+}
+.footer__row {
+  display: grid;
+  grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+  gap: 78px;
+}
+.footer__desc {
+  margin-top: 22px;
+  margin-bottom: 10px;
+  width: 336px;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.6rem;
+  line-height: 28px;
+  letter-spacing: 0%;
+  color: #a9b3bb;
+}
+.footer__heading {
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 1.6rem;
+  line-height: 28px;
+  letter-spacing: 0%;
+  color: #fff;
+}
+.footer__list {
+  margin: 24px 0 28px 0;
+}
+.footer__item {
+  margin-bottom: 10px;
+}
+.footer__link {
+  display: inline-block;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.4rem;
+  line-height: 26px;
+  letter-spacing: 0%;
+  color: #a9b3bb;
+  white-space: nowrap;
+}
+.footer__link:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+.footer__social {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  gap: 10px;
+}
+.footer__social--btn {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: #2e80ce;
+  background: #fff;
+}
+.footer__social--btn:hover {
+  color: #fff;
+  background: #2e80ce;
+}
+.footer__form {
+  display: flex;
+  gap: 12px;
+}
+.footer__form--input {
+  width: 212px;
+  height: 46px;
+  padding: 10px 10px;
+  outline: none;
+  border: 1px solid #406181;
+  border-radius: 4px;
+  background: transparent;
+  color: #fff;
+}
+.footer__form--input::placeholder {
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.4rem;
+  line-height: 26px;
+  letter-spacing: 0%;
+  color: #9ca8b1;
+}
+.btn-subscribe {
+  min-width: 108px;
+  --height: 46px;
+  line-height: var(--height);
+  border: none;
+  border-radius: 4px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 1.4rem;
+  letter-spacing: 0%;
+  cursor: pointer;
+}
+.footer__copyright{
+  padding: 28px 0 42px 0;
+  border-top: 1px solid #406181;
+}
+.footer__copyright--text {
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.4rem;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #aab3ba;
+}
